@@ -88,6 +88,7 @@ void mapdata_clear_space(int x, int y);
 void mapdata_set_check_space(int x, int y);
 void mapdata_set_darkness(int x, int y, int darkness);
 void mapdata_set_smooth(int x, int y, int smooth, int layer);
+void mapdata_clear_old(int x, int y);
 void mapdata_set_face_layer(int x, int y, sint16 face, int layer);
 void mapdata_set_anim_layer(int x, int y, uint16 anim, uint8 anim_speed, int layer);
 void mapdata_scroll(int dx, int dy);
